# serializer version: 1
# name: test_snapshot_minimal_one_bess_one_inverter_one_grid
  '''
  <?xml version="1.0" encoding="UTF-8"?>
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="N">
    <g id="bess_rack_1" data-comp="device-node" data-template="bess_rack" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">BESS Rack 1</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="inverter_1" data-comp="device-node" data-template="inverter" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">Inverter 1</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">inverter</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="grid_module_1" data-comp="device-node" data-template="grid_module" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">Grid Module 1</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">grid_module</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <path id="bus_dc_bus_1" data-comp="bus" data-bus-type="dc" d="N" fill="none" stroke="currentColor" />
  </svg>
  
  '''
# ---
# name: test_snapshot_mixed_two_bess_compute_grid
  '''
  <?xml version="1.0" encoding="UTF-8"?>
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="N">
    <g id="bess_module_1" data-comp="device-node" data-template="bess_module" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">bess_module_1</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">bess_module</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="bess_module_2" data-comp="device-node" data-template="bess_module" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">bess_module_2</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">bess_module</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="compute_module_1" data-comp="device-node" data-template="compute_module" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">compute_module_1</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">compute_module</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="grid_module_1" data-comp="device-node" data-template="grid_module" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">grid_module_1</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">grid_module</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <path id="bus_ac_bus_1" data-comp="bus" data-bus-type="ac" d="N" fill="none" stroke="currentColor" />
    <path id="bus_load_bus_1" data-comp="bus" data-bus-type="ac" d="N" fill="none" stroke="currentColor" />
  </svg>
  
  '''
# ---
# name: test_snapshot_multi_rack_four_bess_one_pcs_one_ac_bus
  '''
  <?xml version="1.0" encoding="UTF-8"?>
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="N">
    <g id="bess_rack_1" data-comp="device-node" data-template="bess_rack" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack_1</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="bess_rack_2" data-comp="device-node" data-template="bess_rack" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack_2</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="bess_rack_3" data-comp="device-node" data-template="bess_rack" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack_3</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="bess_rack_4" data-comp="device-node" data-template="bess_rack" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack_4</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">bess_rack</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <g id="pcs_1" data-comp="device-node" data-template="pcs" transform="N">
      <rect data-region="body" x="N" y="N" width="N" height="N" fill="currentColor" />
      <circle data-region="status-indicator" cx="N" cy="N" r="N" />
      <g data-region="breaker">
        <circle cx="N" cy="N" r="N" fill="none" stroke="currentColor" />
        <line x1="N" y1="N" x2="N" y2="N" stroke="currentColor" />
      </g>
      <text data-region="label-name" x="N" y="N" text-anchor="middle" fill="currentColor">pcs_1</text>
      <text data-region="label-template" x="N" y="N" text-anchor="middle" fill="currentColor">pcs</text>
      <rect data-region="hit-area" x="N" y="N" width="N" height="N" fill="transparent" />
    </g>
    <path id="bus_dc_bus_1" data-comp="bus" data-bus-type="dc" d="N" fill="none" stroke="currentColor" />
  </svg>
  
  '''
# ---
